--- a/plugin.xml
+++ b/plugin.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  id="com.app-sauce.telephony-not-required"
+  id="radioradio.lib"
   version="1.0.0">
 
-  <name>Android Telephony Not Required</name>
-  <description>Make hardware support for telephony optional on Android</description>
+  <name>Library RadioRadio</name>
+  <description></description>
 
-  <author>Christoph Neumann</author>
+  <author>Sergay Osipov Bugsmafia</author>
   <license>Apache 2.0</license>
-  <keywords>cordova,android,telephony,permissions</keywords>
-  <repo>https://github.com/app-sauce/cordova-telephony-not-required.git</repo>
+  <keywords></keywords>
+  <repo>https://github.com/bugsmafia/RadioRadioLib.git</repo>
 
   <platform name="android">
     <config-file target="AndroidManifest.xml" parent="/*">
       <uses-feature android:name="android.hardware.telephony" android:required="false" />
     </config-file>
+	<js-module src="www/RadioRadioLid.js" name="radioradiolib.android">
+		<merges target="radioradio.library" />
+	</js-module>
   </platform>
 </plugin>
